--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "lumina-flow"
-version = "0.1.0-alpha"
+version = "0.2.0"
 description = "LuminaFlow SDK - 光子计算时代的 CUDA. Train once, survive the noise. Build for the speed of light."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -62,7 +62,7 @@ use_parentheses = true
 ensure_newline_before_comments = true
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.13"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
