--- a/lumina_kernel/Cargo.toml
+++ b/lumina_kernel/Cargo.toml
@@ -19,6 +19,8 @@ rayon = "1.8"
 rand = "0.8"
 rand_xoshiro = "0.6"
 serde_json = "1.0"
+thiserror = "1.0"
+once_cell = "1.19"
 
 [dev-dependencies]
 pyo3 = { version = "0.23.3", features = ["auto-initialize"] }
